Feat: Write project page and members page of each project
